possible fix to pictures not fittin on iphone 13

--- a/albums.css
+++ b/albums.css
@@ -5,12 +5,12 @@
   align-items: center;
   flex-wrap: wrap;
   width: 90%;
-  height: 20vh;
+  height: 18vh;
   overflow: scroll;
 }
 
 #mainImage {
-  margin-top: 65px;
+  margin-top: 75px;
   margin-bottom: 5px;
   height: 69vh;
   max-width: 95vw;
@@ -18,7 +18,7 @@
 }
 
 .smallPhoto {
-  height: 19vh;
+  height: 17vh;
   margin: 5px;
   width: auto;
 }
@@ -84,10 +84,6 @@ main {
 }
 
 @media screen and (min-height: 370px) and (max-height: 400px) {
-  main {
-    width: 100vw;
-  }
-
   #mainImage {
     height: 60vh;
   }
